# ReportesSAFT

./: .gitignore  doc.txt  pyproject.toml  requirements.txt
reportes_saft/: README.md  pyproject.toml
reportes_saft/src/: main.py  prueba.py  updater.py  version.py
reportes_saft/src/assets/: horario.json
reportes_saft/src/contexts/: app_context.py
reportes_saft/src/database/: conexion.py  credenciales.json
reportes_saft/src/models/: tra_permop.py  usuario_model.py
reportes_saft/src/reports/: analisis_prescripcion_report.py  mora_bi_aldea_anio_report.py  mora_bi_report.py  mora_ics_report.py  mora_sp_report.py  mora_vs_ingresos_aldea_report.py  per_ope_concepcion_report.py  per_ope_la_esperanza.py  per_ope_sonaguera_report.py  permiso_operacion_report.py  trancicion_det_bi_report.py  trancicion_det_ics_report.py  trancicion_det_sp_report.py  trancicion_report.py
reportes_saft/src/repositories/: aldea_repository.py  analisis_ingresos_repository.py  cuenta_ingreso_repository.py  dashboard_repository.py  facturas_repository.py  mora_aldeas_repository.py  parametro_repository.py  permiso_operacion_repository.py  planes_pago_repository.py  prescripcion_repository.py  trancicion_amb_reposiory.py  trancicion_bi_repository.py  trancicion_ics_repository.py  trancicion_ip_repository.py  trancicion_ps_reposiory.py  usuario_repository.py
reportes_saft/src/services/: aldea_servives.py  analisis_ingresos_services.py  dashboard_services.py  mora_aldea_services.py  mora_bi_services.py  mora_ics_sevices.py  mora_ip_services.py  mora_sp_services.py  parametro_service.py  permiso_operacion_services.py  plan_pago_services.py  prescripcion_services.py  trancicion_traspaso_det_services.py  trancicion_traspaso_servivces.py  update_services.py  usuario_services.py
reportes_saft/src/test/: test_planes_pago_repository.py
reportes_saft/src/ui/: ui_alertas.py  ui_botones.py  ui_btn_actualizar.py  ui_cards.py  ui_checkBox.py  ui_colors.py  ui_container.py  ui_dropbox.py  ui_radio.py  ui_snack_bar.py  ui_style_table.py  ui_text.py
reportes_saft/src/utils/: credenciales.py  encriptador.py  logger_config.py
reportes_saft/src/views/: about_view.py  layout_view.py  login_view.py  permiso_operacion_view.py  reportes_view.py
updater/: pyproject.toml  ui_progress.py  updater.py  updater_gui.py
updater/src/: main.py
updater/src/contexts/: app_context.py
updater/src/helpers/: updater_helper.py
updater/src/repositories/: data_base_repository.py
(+19 files in other folders)
